--- a/Django/motor/core/templates/index.html
+++ b/Django/motor/core/templates/index.html
@@ -23,10 +23,10 @@
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a href="/" class="nav-link" data-page="index">Home</a>
-                        <a href="/veiculo" class="nav-link" data-page="veiculos">Veículos</a>
-                        <a href="/servico" class="nav-link" data-page="servicos">Serviços</a>
-                        <a href="/sobre" class="nav-link" data-page="sobre">Sobre Nós</a>
-                        <a href="/contato" class="nav-link" data-page="contato">Contato</a>
+                        <a href="/veiculo/" class="nav-link" data-page="veiculos">Veículos</a>
+                        <a href="/servico/" class="nav-link" data-page="servicos">Serviços</a>
+                        <a href="/sobre/" class="nav-link" data-page="sobre">Sobre Nós</a>
+                        <a href="/contato/" class="nav-link" data-page="contato">Contato</a>
                     </div>
                 </div>
                 <div class="md:hidden flex items-center">
@@ -44,11 +44,11 @@
         </nav>
 
         <div id="mobile-menu" class="md:hidden hidden"> <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <a href="index.html" class="nav-link-mobile" data-page="index">Home</a>
-                <a href="veiculos.html" class="nav-link-mobile" data-page="veiculos">Veículos</a>
-                <a href="servicos.html" class="nav-link-mobile" data-page="servicos">Serviços</a>
-                <a href="sobre.html" class="nav-link-mobile" data-page="sobre">Sobre Nós</a>
-                <a href="contato.html" class="nav-link-mobile" data-page="contato">Contato</a>
+                <a href="/" class="nav-link-mobile" data-page="index">Home</a>
+                <a href="/veiculos/" class="nav-link-mobile" data-page="veiculos">Veículos</a>
+                <a href="/servico/" class="nav-link-mobile" data-page="servicos">Serviços</a>
+                <a href="/sobre/" class="nav-link-mobile" data-page="sobre">Sobre Nós</a>
+                <a href="/contato/" class="nav-link-mobile" data-page="contato">Contato</a>
             </div>
         </div>
     </header>
