--- a/Django/motor/core/templates/veiculo.html
+++ b/Django/motor/core/templates/veiculo.html
@@ -16,17 +16,17 @@
         <nav class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <div class="flex items-center">
-                    <a href="index.html" class="flex-shrink-0">
+                    <a href="/" class="flex-shrink-0">
                         <img class="h-10 w-auto" src="https://placehold.co/150x50/000000/FFFFFF?text=MotorWeb" alt="Logo MotorWeb">
                     </a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
-                        <a href="index.html" class="nav-link" data-page="index">Home</a>
-                        <a href="veiculos.html" class="nav-link" data-page="veiculos">Veículos</a>
-                        <a href="servicos.html" class="nav-link" data-page="servicos">Serviços</a>
-                        <a href="sobre.html" class="nav-link" data-page="sobre">Sobre Nós</a>
-                        <a href="contato.html" class="nav-link" data-page="contato">Contato</a>
+                        <a href="/" class="nav-link" data-page="index">Home</a>
+                        <a href="/veiculo/" class="nav-link" data-page="veiculos">Veículos</a>
+                        <a href="/servico/" class="nav-link" data-page="servicos">Serviços</a>
+                        <a href="/sobre/" class="nav-link" data-page="sobre">Sobre Nós</a>
+                        <a href="/contato/" class="nav-link" data-page="contato">Contato</a>
                     </div>
                 </div>
                 <div class="md:hidden flex items-center">
@@ -43,13 +43,12 @@
             </div>
         </nav>
 
-        <div id="mobile-menu" class="md:hidden hidden">
-            <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <a href="index.html" class="nav-link-mobile" data-page="index">Home</a>
-                <a href="veiculos.html" class="nav-link-mobile" data-page="veiculos">Veículos</a>
-                <a href="servicos.html" class="nav-link-mobile" data-page="servicos">Serviços</a>
-                <a href="sobre.html" class="nav-link-mobile" data-page="sobre">Sobre Nós</a>
-                <a href="contato.html" class="nav-link-mobile" data-page="contato">Contato</a>
+        <div id="mobile-menu" class="md:hidden hidden"> <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+                <a href="/" class="nav-link-mobile" data-page="index">Home</a>
+                <a href="/veiculos/" class="nav-link-mobile" data-page="veiculos">Veículos</a>
+                <a href="/servico/" class="nav-link-mobile" data-page="servicos">Serviços</a>
+                <a href="/sobre/" class="nav-link-mobile" data-page="sobre">Sobre Nós</a>
+                <a href="/contato/" class="nav-link-mobile" data-page="contato">Contato</a>
             </div>
         </div>
     </header>
